--- a/_media-query.scss
+++ b/_media-query.scss
@@ -4,7 +4,7 @@
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
     border-bottom: 1px dotted whitesmoke;
     padding: 30px 70px 30px 70px;
     display: flex;
