--- a/main.css
+++ b/main.css
@@ -134,7 +134,8 @@ h6 {
   }
 }
 .content__description {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   width: 90%;
   background-color: #e9edc9;
   margin-top: 40px;
@@ -189,7 +190,6 @@ h6 {
   transition: border-color 0.3s;
 }
 .content .projects__card:hover {
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   transform: scale(1.1);
 }
 .content .projects__card-img {
@@ -309,7 +309,7 @@ h6 {
     position: sticky;
     top: 0;
     width: 100%;
-    height: 100px;
+    height: 90px;
     border-bottom: 1px dotted whitesmoke;
     padding: 30px 70px 30px 70px;
     display: flex;
